@@ -445,6 +445,9 @@ CONFIG_DEBUG_NET=n
 CONFIG_DEBUG_LCD=n
 CONFIG_DEBUG_GRAPHICS=n
 CONFIG_DEBUG_INPUT=n
+CONFIG_DEBUG_FS=n
+CONFIG_DEBUG_SPI=n
+CONFIG_SPI_REGDEBUG=n
 
 CONFIG_HAVE_CXX=n
 CONFIG_HAVE_CXXINITIALIZE=n
